src/snapshots/noko__parser__tests__check_color-4.snap
---
source: src/parser.rs
expression: "parse(\"#aaaaaa // arstarst //arstrst\")"
---
Ok(
    [
        ColorLiteral(
            "aaaaaa",
        ),
    ],
)
