src/snapshots/noko__parser__tests__check_color-5.snap
---
source: src/parser.rs
expression: "parse(\"   #aaaaaa\")"
---
Ok(
    [
        ColorLiteral(
            "aaaaaa",
        ),
    ],
)
