src/snapshots/noko__parser__tests__check_color-6.snap
---
source: src/parser.rs
expression: "parse(\"\\n\\n#aaaaaa\\n\\n\")"
---
Ok(
    [
        ColorLiteral(
            "aaaaaa",
            2..9,
        ),
    ],
)
