src/snapshots/noko__parser__tests__check_color.snap
---
source: src/parser.rs
expression: "parse(\"#aFaFFA//arstRSTarst arst arst\")"
---
Ok(
    [
        ColorLiteral(
            "aFaFFA",
        ),
    ],
)
