src/snapshots/noko__parser__tests__check_nested-2.snap
---
source: src/parser.rs
expression: "parse(\"((arst arst) arst (arst arst))\")"
---
Ok(
    [
        Call(
            [
                Call(
                    [
                        Var(
                            "arst",
                            2..6,
                        ),
                        Var(
                            "arst",
                            7..11,
                        ),
                    ],
                    1..13,
                ),
                Var(
                    "arst",
                    13..17,
                ),
                Call(
                    [
                        Var(
                            "arst",
                            19..23,
                        ),
                        Var(
                            "arst",
                            24..28,
                        ),
                    ],
                    18..29,
                ),
            ],
            0..30,
        ),
    ],
)
