src/snapshots/noko__parser__tests__check_nested-3.snap
---
source: src/parser.rs
expression: "parse(\" ( (arst))\")"
---
Ok(
    [
        Call(
            [
                Call(
                    [
                        Var(
                            "arst",
                            4..8,
                        ),
                    ],
                    3..9,
                ),
            ],
            1..10,
        ),
    ],
)
