src/snapshots/noko__parser__tests__check_nested-4.snap
---
source: src/parser.rs
expression: "parse(\"( (arst) s (arst ) ) arst RSt\")"
---
Ok(
    [
        Call(
            [
                Call(
                    [
                        Var(
                            "arst",
                            3..7,
                        ),
                    ],
                    2..9,
                ),
                Var(
                    "s",
                    9..10,
                ),
                Call(
                    [
                        Var(
                            "arst",
                            12..16,
                        ),
                    ],
                    11..19,
                ),
            ],
            0..21,
        ),
        Var(
            "arst",
            21..25,
        ),
        Var(
            "RSt",
            26..29,
        ),
    ],
)
