src/snapshots/noko__parser__tests__check_nested-5.snap
---
source: src/parser.rs
expression: "parse(\"((:)(:))\")"
---
Ok(
    [
        Call(
            [
                Call(
                    [
                        Var(
                            ":",
                            2..3,
                        ),
                    ],
                    1..4,
                ),
                Call(
                    [
                        Var(
                            ":",
                            5..6,
                        ),
                    ],
                    4..7,
                ),
            ],
            0..8,
        ),
    ],
)
