src/snapshots/noko__parser__tests__check_nested.snap
---
source: src/parser.rs
expression: "parse(\"((this-is-a-test) \\\"RST\\\" #aaaaaa)\")"
---
Ok(
    [
        Call(
            [
                Call(
                    [
                        Var(
                            "this-is-a-test",
                            2..16,
                        ),
                    ],
                    1..18,
                ),
                StringLiteral(
                    "RST",
                    18..23,
                ),
                ColorLiteral(
                    "aaaaaa",
                    24..31,
                ),
            ],
            0..32,
        ),
    ],
)
