src/snapshots/noko__parser__tests__check_print.snap
---
source: src/parser.rs
expression: "print_ast(&parse(\"((:)(:))\").unwrap()[0])"
---
"((:) (:))"
