src/snapshots/noko__parser__tests__check_str_lit-2.snap
---
source: src/parser.rs
expression: "parse(\"\\\"\\\"\")"
---
Ok(
    [
        StringLiteral(
            "",
            0..2,
        ),
    ],
)
