src/snapshots/noko__parser__tests__check_str_lit.snap
---
source: src/parser.rs
expression: "parse(\"\\\"this is a test\\\"\")"
---
Ok(
    [
        StringLiteral(
            "this is a test",
            0..16,
        ),
    ],
)
